--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,20 @@
 
 }
 
+
+:root {
+  --primaryColor: pink;
+  --mainWhite: #fff;
+  --offWhite: #f7f7f7;
+  --mainBlack: #222;
+  --mainGrey: #ececec;
+  --darkGrey: #cfcfcf;
+  --mainTransition: all 0.3s linear;
+  --mainSpacing: 3px;
+  --lightShadow: 2px 5px 3px 0px rgba(0, 0, 0, 0.5);
+  --darkShadow: 4px 10px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
 .App-Logo{
   height: 38px;
   width: 38px;
@@ -34,7 +48,7 @@ li {
   position: relative;
 }
 .nav-links li a{
-  color: pink;
+  color: var(--primaryColor);
   text-decoration: none;
 }
 .nav-links li a:hover{
@@ -96,18 +110,106 @@ li:hover::after {
 }
 
 .billboard{
-  min-height: 100vh;
-  background-color: tomato;  
+  min-height: 80vh;
   margin: 0 auto;
+  background-image: url('./images/bg.jpg');
+  background-position: 50% 50%; 
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 .billboard-container {
-
- 
-  display: flex;
-  align-items: center;
- 
- 
   width: 960px;
   margin: 0 auto;
+}
+
+.center-content-vertically{
+  display: flex;
+  align-items: center;
+}
+
+.main-grid{
+  color: #fff;
+  max-width: 60%;
+  padding-top: 80px;
+}
+.default-padding{
+  padding: 30px;
+}
+
+.main-title{
+  color: var(--mainBlack); 
+  padding-top: 30px;
+}
+.main-text{
+  color: var(--mainBlack);
+  padding-top: 30px;
+  max-width: 70%;
+  text-align: center;
+}
+.center-content{
+  display: flex;
+  justify-content: center;
+}
+
+/* Boxes*/
+.flex-container {
+  padding: 0;
+  margin: 80px;
+  list-style: none;
+  justify-content: center;
+  -ms-box-orient: horizontal;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: flex;
+}
+
+.shorthand { 
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+}
+
+.longhand { 
+  -webkit-flex-flow: wrap row;
+  flex-flow: wrap row;
+  
+}
+
+.longhand li {
+  background:transparent;
+}
+
+.flex-item {
+  background: tomato;
+  padding: 5px;
+  width: 300px;
+  height: 100px;
+  margin: 10px;
+  
+  line-height: 100px;
+  color: var(--mainBlack);
+  border: solid 1px red;
+  font-weight: bold;
+  font-size: 2em;
+  text-align: center;
+}
+
+.jss365 {
+  width: 61px;
+  height: 61px;
+}
+
+.MuiSvgIcon-root {
+  fill: red;
+ 
+  display: inline-block;
+  font-size: 1.5rem;
+  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  flex-shrink: 0;
+  user-select: none;
 }
