--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,12 @@
 
 
 :root {
-  --primaryColor: pink;
+  --primaryColor: #cb61a0;
+  --secondaryColor: #78428d;
   --mainWhite: #fff;
   --offWhite: #f7f7f7;
   --mainBlack: #222;
-  --mainGrey: #ececec;
+  --mainGray: #282c34;
   --darkGrey: #cfcfcf;
   --mainTransition: all 0.3s linear;
   --mainSpacing: 3px;
@@ -19,16 +20,17 @@
 }
 
 .App-Logo{
-  height: 38px;
-  width: 38px;
+  height: 45px;
+  width: 45px;
   padding: 8px 0 8px 0;
 }
-.container{
-  background-color: #282c34;
+.nav-container-full-width{
+  background-color: var(--mainGray);
+  min-height: 5vh;
 }
 .navbar {
-  background-color: #282c34;
-  min-height: 8vh;
+  background-color: var(--mainGray);
+  
   display: flex;
   align-items: center;
   padding-left: 30px;
@@ -36,7 +38,7 @@
   width: 960px;
   margin: 0 auto;
 }
-.nav-links{
+.nav-links {
   display: flex;
   align-items: right;
   list-style-type: none;
@@ -44,20 +46,17 @@
   padding-right: 30px;
 }
 
-li {
+.nav-links li {
   position: relative;
+  margin:0 0 0 20px; 
 }
 .nav-links li a{
-  color: var(--primaryColor);
+  color: var(--offWhite);
   text-decoration: none;
+  
 }
 .nav-links li a:hover{
-  color: white;
-}
-
-li {
-  margin:0 0 0 20px;   
-
+  color: var(--primaryColor);
 }
 
 
@@ -68,7 +67,7 @@ li:hover::before {
   animation-timing-function: ease-out;
   position: absolute;
   animation-fill-mode: forwards;
-  color: white;
+  color: var(--primaryColor);
 }
 
 li:hover::after {
@@ -78,7 +77,7 @@ li:hover::after {
   animation-timing-function: ease-out;
   position: absolute;
   animation-fill-mode: forwards;
-  color: white;
+  color: var(--primaryColor);
 }
 
 @keyframes example {
@@ -108,7 +107,7 @@ li:hover::after {
     transform: rotate(0deg);
   }
 }
-
+/* Billboard*/
 .billboard{
   min-height: 80vh;
   margin: 0 auto;
@@ -125,17 +124,20 @@ li:hover::after {
 }
 
 .center-content-vertically{
+  min-height: 60vh;
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 
+
 .main-grid{
   color: #fff;
-  max-width: 60%;
+  max-width: 30%;
   padding-top: 80px;
 }
 .default-padding{
-  padding: 30px;
+  padding: 0px;
 }
 
 .main-title{
