--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* 
+
 * {
   margin: 0;
   padding: 0;
@@ -107,7 +109,7 @@
     transform: rotate(0deg);
   }
 }
-/* Billboard*/
+ Billboard
 .billboard{
   min-height: 60vh;
   margin: 0 auto;
@@ -176,7 +178,7 @@
   justify-content: center;
 }
 
-/* Boxes*/
+ Boxes
 .flex-container {
   padding: 0;
   margin: 80px;
@@ -236,3 +238,5 @@
   flex-shrink: 0;
   user-select: none;
 }
+
+*/
