--- a/src/sass/styles.css
+++ b/src/sass/styles.css
@@ -345,6 +345,18 @@ flex-container {
           user-select: none;
 }
 
+.half-laptop {
+  position: relative;
+}
+
+.half-laptop-image {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50%;
+  height: 50%;
+}
+
 @media (max-width: 700px) {
   .showcase {
     height: 400px;
