--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -1,11 +1,12 @@
 $light-color:#f4f4f4;
-$primary-color: #cb61a0;
-$secondary-color: #ff8700;
+$primary-color: #2bbacb;
+$secondary-color: #cb61a0;
 $main-blue: #0e6cff;
 $main-white: #fff;
 //$primary-color: #cb61a0;
 //$secondary-color: #78428d;
-$main-gray: #282c34;
+$dark-black: #151618;
+$light-black: #181D20;
 
 //set text color based on bg
 
