--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,5 +1,7 @@
 @import 'config';
-
+@import 'mobile';
+@import 'utilities';
+@import 'buttons';
 * {
     box-shadow: border-box;
     margin: 0;
@@ -7,9 +9,13 @@
 }
 
 body{
-    background-color: $light-color;
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 1.6 ;
+  // background: rgb(16,101,167);
+  // background: linear-gradient(90deg, rgba(16,101,167,1) 0%, rgba(3,82,151,1) 64%, rgba(2,80,150,1) 70%, rgba(23,80,151,1) 100%);
+
+  background: linear-gradient(90deg, rgb(20,21,23) 0%, rgb(27,26,29) 70%, rgb(21,22,24) 100%);
+  font-family: 'Nunito', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  
 }
 img {
     width: 100%;
@@ -18,102 +24,165 @@ img {
 a {
    text-decoration: none; 
 }
-.showcase{
-    @include set-background($main-gray);
 
-   
-    height: 550px;
-    nav{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        border-bottom: 0.5px solid $main-white;
-        position: sticky;
-        top: 0;
-        align-self: flex-start;
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 2000px;
+  background-color: transparent;
+  height: 70px;
+  color: #fff;
+  margin: 0 auto;
+  z-index: 3;
+}
 
-        img {
-            width:35px;
-            height: auto;
-        }
-        ul {
-            display: flex;
-            list-style-type: none;
-           
-        }
-        li {
-            position: relative;
+.header2 {
+  position: fixed;
+  top: 0%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 2000px;
+  height: 70px;
+  background-color: #fff;
+  color: $dark-black;
+  z-index: 2;
+  border-bottom: 1px solid rgba(0,0,0,0.05);
+  box-shadow: 0 0 15px rgba(0,0,0,0.1);
+  animation: navbar-slice-down 1s;
+  left: 50%;
+  transform: translate(-50%, 0);
 
-        }
-        a {
-            color: set-text-color($primary-color);
-            padding: 15px 15px;
+  li:hover::before{
+    content: "[";
+    animation: left-bracket;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-out;
+    position: absolute;
+    animation-fill-mode: forwards;
+    color: $dark-black;
+  }
+  li:hover::after {
+    content: "]";
+    color: $dark-black;
+    animation: right-bracket;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-out;
+    position: absolute;
+    animation-fill-mode: forwards;
+    color: $dark-black;
+  }
+}
+
+@keyframes navbar-slice-down {
+  0% {
+    top: -70px;
+  }
+  35% {
+    background-color: #fff;
+    color: #fff;
+  }
   
-        }
-        a:hover{
-            color: $primary-color;
-        }
-        li:hover::before{
-            content: "[";
-            color: $primary-color;
-            animation: example;
-            animation-duration: 0.5s;
-            animation-timing-function: ease-out;
-            position: absolute;
-            animation-fill-mode: forwards;
-        }
-        li:hover::after {
-            content: "]";
-            color: $primary-color;
-            animation: exampletwo;
-            animation-duration: 0.5s;
-            animation-timing-function: ease-out;
-            position: absolute;
-            animation-fill-mode: forwards;
+  100% {
+    background-color: #fff;
+  }
+}
 
-          }
-          @keyframes example {
-            0% {
-              left: 5px;
-              opacity: 0;
-              transform: rotate(90deg);
-            }
-          
-            100% {
-              left: 5px;
-              opacity: 1;
-              transform: rotate(0deg);
-            }
-          }
-         @keyframes exampletwo {
-            from {
-              right: 5px;
-              opacity: 0;
-              transform: rotate(-90deg);
-            }
-          
-            to {
-              right: 5px;
-              opacity: 1;
-              transform: rotate(0deg);
-            }
-          }
+.logo {
+  margin: 0 24px;
+  max-width:48px;
+  min-width: 35px;
+}
+
+.links {
+  padding: 0;
+  margin: 0 24px;
+}
+
+.link-item{
+  display: inline-block;
+  padding: 8px;
+  margin: 0 12px;
+  cursor: pointer;
+}
+ul {
+  display: flex;
+  list-style-type: none;
+}
+li {
+  position: relative;
+}
+
+li:hover::before{
+  content: "[";
+  color: #fff;
+  animation: left-bracket;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-out;
+  position: absolute;
+  animation-fill-mode: forwards;
+}
+li:hover::after {
+  content: "]";
+  color: #fff;
+  animation: right-bracket;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-out;
+  position: absolute;
+  animation-fill-mode: forwards;
+
+}
+
+@keyframes left-bracket {
+  0% {
+    left: -4px;
+    opacity: 0;
+    transform: rotate(90deg);
+  }
+
+  100% {
+    left: -4px;
+    opacity: 1;
+    transform: rotate(0deg);
+  }
+}
+@keyframes right-bracket {
+  from {
+    right: -4px;
+    opacity: 0;
+    transform: rotate(-90deg);
+  }
+
+  to {
+    right: -4px;
+    opacity: 1;
+    transform: rotate(0deg);
+  }
+}
+
+.showcase-content{
+   padding: 4% 2%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    max-width: 1100px;
+    width: 100%;
+    font-family: 'Poppins', sans-serif;
+    div{
+      width: 65%;
     }
-  
-    &-content{
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin-top: 30px;
-
-        img {
-            width: 45%;
-        }
-        h1 {
-            font-size: 50px;
-            line-height: 1.2;
-        }
+   img {
+     width: 35%;
+   }
+    h1 {
+        font-size: 5em;
+        line-height: 1.2;
+        color: whitesmoke;  
     }
 }
 
@@ -125,26 +194,11 @@ a {
     line-height: 1.2;
 }
 
-
-    
     .main-text{
     padding: 30px 20%;
     text-align: center;
 }
 
-flex-container {
-    padding: 0;
-    margin: 80px;
-    list-style: none;
-    justify-content: center;
-    -ms-box-orient: horizontal;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -moz-flex;
-    display: -webkit-flex;
-    display: flex;
-  }
-  
   .shorthand { 
     -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
@@ -161,50 +215,103 @@ flex-container {
   .longhand li {
     background:transparent;
   }
-  
-  .flex-item {
-    background: tomato;
-    padding: 5px;
-    width: 300px;
-    height: 100px;
-    margin: 10px;
+  //SubBillboard
+  .subBillboard-wrapper{
+    max-width: 2000px;
+    height: 150px;
+    margin: 0 auto;
+    display: flex;
     
-    line-height: 100px;
-    color: var(--mainBlack);
-    border: solid 1px red;
-    font-weight: bold;
-    font-size: 2em;
-    text-align: center;
-  }
-  
-  .jss365 {
-    width: 61px;
-    height: 61px;
-  }
-  
-  .MuiSvgIcon-root {
-    fill: red;
-   
-    display: inline-block;
-    font-size: 1.5rem;
-    transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    flex-shrink: 0;
-    user-select: none;
   }
 
-  .half-laptop {
-      position: relative;
-
-     &-image {
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 50%;
-      height: 50%;
-     }
-  
+  .background-color-wrapper-1{
+    height: 150px;
+    flex: 1;
+    background-color: rgba(31, 39, 50, .4);
+    position: relative;
+  }
+  .background-color-wrapper-2{
+    height: 150px;
+    background-color: rgba(43, 186, 203, .2);
+    width: 35%;
   }
 
-@import 'mobile';
-@import 'utilities';
-@import 'buttons';
+ 
+  .half{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    padding: 30px 70px;
+    width: 70%;
+    overflow: hidden;
+     flex: 1;
+     color: #fff;
+     border: 1px solid yellowgreen;
+     display: flex;
+     justify-content: flex-end;
+
+    h5{
+      padding-right: 80px;
+      border: 1px solid red;
+    }
+  }
+  .second-half{
+    border: 1px solid yellowgreen;
+    padding: 30px 70px;
+    color: #fff;
+    display: flex;
+  }
+
+
+  
+  //cellphone part
+
+.center-content{
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+.center-content > div {
+  background-color: #f1f1f1;
+}
+
+.some-page-wrapper {
+  display: flex;
+  background: white;
+  
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 100%;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+}
+
+.orange-column {
+  background-color: orange;
+  height: 100px;
+  
+}
+
+
+.green-column {
+  background-color: green;
+  height: 100px;
+  text-align: right;
+}
+
+
+
+
+
+
+
+
