--- a/src/sass/_mobile.scss
+++ b/src/sass/_mobile.scss
@@ -1,15 +1,17 @@
-@media(max-width: 700px){
-    .showcase{
-        height: 400px;
-    
-        &-content {
-            text-align: center;
-            margin-top: 20px;
 
-            img {
-                display: none;
-            }
-        }
+@media (max-width: 700px) {
+  .showcase-content {
+    text-align: center;
+    div {
+      width: 100%;
     }
-
+    h1{
+      font-size: 2em; 
+    }
+    img {
+      display: none;
+    }
+    
+  }
 }
+
